# klarnayp

./: .gitignore  README.md  klarnayp.cabal  stack.yaml
data/: managed-schema  solr-import.md  solrconfig.xml
snaplets/heist/templates/: index.tpl
src/: Main.hs  QueryParser.hs  Solr.hs  Types.hs
static/: klarna-ui-css-components.css
