name:                klarnayp
version:             0.1
synopsis:            Klarna Yellow Pages exercise
description:         Please see README.md
homepage:            https://github.com/onporat/klarnayp#readme
license:             BSD3
author:              Oded Porat
maintainer:          onporat@gmail.com
copyright:           2016 Oded Porat
category:            Web
build-type:          Simple
cabal-version:       >= 1.2

Executable klarnayp
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Solr
  build-depends: base                      >= 4        && < 5
               , snap                      >= 0.12
               , snap-core                 >= 0.9      && < 0.10
               , heist                     >= 0.12
               , lens                      >= 3.9
               , text                      >= 0.11
               , mtl
               , xmlhtml
               , wreq
               , aeson
               , lens-aeson
  GHC-options: -threaded -O2
  Extensions: OverloadedStrings
            , TemplateHaskell
            , FlexibleInstances
